--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -96,6 +96,7 @@ body {
   background-color: #FFF;
   overflow: auto;
   transition: all 500ms ease-in;
+  display: block;
 }
 #stickyMenu .title {
   color: #5b5e61;
@@ -1640,7 +1641,7 @@ div.org-container input[type="checkbox"] {
   }
 }
 @media (min-width: 797px) {
- #indexNavBar {
+ #indexNavBar, #indexContainer {
     display: none;
   }
   div.left-panel, a.back, a.open {
@@ -1760,9 +1761,13 @@ div.org-container input[type="checkbox"] {
     margin-top: 4px;
   }
 }
-@media (max-width: 1029px) {
-  div.right-panel {
-    margin-left: 45px;
+@media (max-width: 1073px) {
+  body.open-nav .right-panel {
+    margin-left: 210px !important;
+  }
+  #stickyMenu {
+    font-size: 0.7em !important;
+    width: 150px !important;
   }
 }
 @media (max-width: 1199px) {
@@ -1814,6 +1819,17 @@ div.org-container input[type="checkbox"] {
 @media (max-width: 1300px) {
   #fullSizeBox {
     height: 680px;
+  }
+  #stickyMenu {
+    width: 150px !important;
+    font-size: 0.7em !important;
+  }
+  body.open-nav .left-panel {
+    width: 210px;
+  }
+
+  body.open-nav .right-panel {
+    margin-left: 180px;
   }
 }
 @media (min-width: 1400px) {
