--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -1197,17 +1197,17 @@
             <h4 class="profile-item-title">{{_("Three ways to complete questionnaire")}}</h4>
             <div class="custom-container">
                 <div class="profile-item-container custom-container-item-right">
-                    <h4 class="profile-item-title">{{_("Send email")}}</h4>
+                    <h4 id="customSendEmailLoc" class="profile-item-title index-item">{{_("Send email")}}</h4>
                     <div class="text-muted custom-container-content">{{_("Invite or remind patient over email to complete their questionnaire")}}</div><br/>
                     <div>{{profileEmailForm(person)}}</div>
                 </div>
                 <div class="profile-item-container custom-container-item-right">
-                    <h4 class="profile-item-title">{{_("Log in as patient")}}</h4>
+                    <h4 id="customLoginAsLoc" class="profile-item-title index-item">{{_("Log in as patient")}}</h4>
                     <div class="custom-container-content text-muted">{{_("This logs you out, and logs in the patient without their needing to enter credentials. This is so the patient can complete their questionnaire on this device. Ideal for tablet and kiosk computers.")}}</div><br/>
                     <button class="btn btn-tnth-primary" onclick="handleLoginAs();">{{_("Login as patient")}}</button>
                 </div>
                 <div class="profile-item-container custom-container-item">
-                    <h4 class="profile-item-title">{{_("Enter manually")}}</h4>
+                    <h4 id="customEnterManuallyLoc" class="profile-item-title index-item">{{_("Enter manually")}}</h4>
                     <div class="custom-container-content text-muted">{{_("Enter questionnaire responses on patient's behalf. Helpful if responses have been completed on paper.")}}</div><br/>
                     <a class="btn btn-tnth-primary" id="assessmentLink" href="/api/present-assessment?instrument_id=eortc&instrument_id=hpfs&instrument_id=prems&instrument_id=irondemog&subject_id={{person.id}}">{{_("Enter manually")}}</a>
 
