--- a/portal/static/css/topnav.css
+++ b/portal/static/css/topnav.css
@@ -30,7 +30,7 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-.watermark {
+.watermark, .watermark-nowrapper {
   position: absolute;
   top: 0;
   right: 0;
@@ -346,6 +346,9 @@
     font-size: 0.7em;
     background-color: transparent;
     color: #FFF;
+  }
+  .watermark-nowrapper {
+    font-size: 0.7em;
   }
 }
 @media (min-width: 992px) {
