--- a/portal/static/less/topnav.less
+++ b/portal/static/less/topnav.less
@@ -30,7 +30,7 @@
     box-sizing: border-box;
   }
 }
-.watermark {
+.watermark, .watermark-nowrapper {
   position: absolute;
   top: 0;
   right: 0;
@@ -359,6 +359,9 @@
     font-size: 0.7em;
     background-color: transparent;
     color: #FFF;
+  }
+  .watermark-nowrapper {
+    font-size: 0.7em;
   }
 }
 @media (min-width: 992px) {
