--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -111,7 +111,7 @@ body {
   margin-bottom:6px;
   cursor:pointer;
 }
-#stickyMenu li:hover {
+#stickyMenu a:hover {
   color: #337ab7;
 }
 #stickyMenu.sticky-show {
@@ -318,6 +318,9 @@ div.orglist-selector div.org-container label.org-label {
   -webkit-transform: translate(0, 0);
   transform: translate(0, 0);
   display: block;
+}
+#indexContainer a {
+  color: #FFF;
 }
 #indexNavBar {
   width: 100%;
