--- a/portal/templates/landing.html
+++ b/portal/templates/landing.html
@@ -7,6 +7,9 @@
     #mainDiv {
         background: none;
     }
+    .watermark {
+        display: none;
+    }
     #timeOutMessageContainer {
         margin: 1em auto;
         padding: 0.5em 1em;
@@ -54,5 +57,9 @@
         $("#fullSizeBox").closest("div.col-lg-12").css("padding", "0");
         if (typeof sessionStorage != "undefined") sessionStorage.clear();
     });
+    (function() {
+        var __env = {% if config.SYSTEM_TYPE %}"{{config.SYSTEM_TYPE}}"{% else %}""{% endif %};
+        if ((__env != "" && __env.toLowerCase() != "production") && ($(".watermark-nowrapper").length == 0)) $("<div class='watermark-nowrapper'>TRUE<sup>NTH</sup> - " + __env + " version - Not for study or clinical use</div>").appendTo("body");
+    }) ();
 {% endblock %}
 
