--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -85,12 +85,6 @@ function handleLoginAs() {
     location.replace('/login-as/{{user.id}}');
 };
 
-function goTo(event, id) {
-    event.stopPropagation();
-    window.location = "#" + id;
-    $("#indexContainer").removeClass("open");
-};
-
 var __stickyMenu, __navBar, __stickyMenu_topPos, __homeFooter, __indexContainer, __indexIcon, __leftPanel;
 
 $(document).ready(function(){
@@ -215,7 +209,7 @@ $(document).ready(function(){
       var indexContent = "<p class='title'><em>Click</em> each to go to section:</p><ul>";
           t.each(function() {
           if ($(this).is(":visible")) {
-            indexContent += "<li onclick=' goTo(event, \"" + $(this).attr("id") + "\");'>" + $(this).text() + "</li>";
+            indexContent += "<li><a href='#" + $(this).attr("id") + "'>"  + $(this).text() + "</a></li>";
           };
       });
       indexContent += "</ul>";
