--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -133,6 +133,9 @@ a.open, a.back {
 a.open {
   top: 14em;
 }
+a.open:hover, a.back:hover {
+  color: #356d43
+}
 div.left-panel {
   position:fixed;
   padding: 10px;
@@ -155,9 +158,6 @@ div.right-panel {
   transition:margin-left ease .5s;
 }
 
-body.open-nav .right-panel {
-    margin-left:245px;
-}
 #adminTable {
   min-height: 280px;
   transition: all 0.5s ease-in;
@@ -406,11 +406,16 @@ div.orglist-selector div.org-container label.org-label {
 #dataDownloadModal .profile-radio-list {
   margin-left:1em
 }
+#dataDownloadModal div.checkbox label, #dataDownloadModal label.radio-inline {
+  font-size: 0.8em;
+}
+#dataDownloadModal input[type="radio"] {
+  position: relative;
+  top: -1px;
+  left: -1px;
+}
 #_downloadMessage {
   color:#a94442
-}
-#patientsInstrumentList div.checkbox label {
-  font-size: 0.8em;
 }
 .orglist-download-container {
   display: inline-block;
@@ -1255,7 +1260,7 @@ sub.pointer:hover {
   background-color: #575a4d;
   border: 1px solid #575a4d;
   padding: 0.3em;
-  width: 150%;
+  width: 170%;
   font-size: 0.9em;
 }
 .tooltip.top .tooltip-arrow {
@@ -1866,6 +1871,17 @@ div.org-container input[type="checkbox"] {
   }
   .btn-set .btn {
     margin-bottom: 0.5em;
+  }
+}
+@media (max-width: 1417px) {
+  body.open-nav .right-panel {
+    margin-left:195px !important;
+  }
+}
+
+@media (max-width: 1745px) {
+  body.open-nav .right-panel {
+    margin-left:160px;
   }
 }
 /*** https://github.com/lipis/bootstrap-social ***/
