--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -171,6 +171,9 @@ a.open, a.back {
 a.open {
   top: 14em;
 }
+a.open:hover, a.back:hover {
+  color: #356d43
+}
 div.left-panel {
   position:fixed;
   padding: 10px;
@@ -193,9 +196,6 @@ div.right-panel {
   transition:margin-left ease .5s;
 }
 
-body.open-nav .right-panel {
-    margin-left:245px;
-}
 #adminTable {
   min-height: 280px;
   transition: all 0.5s ease-in;
@@ -437,21 +437,32 @@ box-shadow: 3px 4px 5px 0px rgba(197,199,197,1);
   font-size: 1.1em;
   height: 2.6em;
 }
-#dataDownloadModal .modal-body {
-  padding: 1em
-}
-#dataDownloadModal button {
-  font-size:0.8em;
-}
-#dataDownloadModal .profile-radio-list {
-  margin-left:1em
-}
-#_downloadMessage {
-  color:#a94442
+
+#dataDownloadModal {
+  .modal-body {
+    padding: 1em
+  }
+  button {
+    font-size:0.8em;
+  }
+  .profile-radio-list {
+    margin-left:1em
+  }
+  div.checkbox label{
+    font-size: 0.8em;
+  }
+  label.radio-inline {
+    font-size: 0.8em;
+  }
+  input[type="radio"] {
+    position: relative;
+    top: -1px;
+    left: -1px;
+  }
 }
 
-#patientsInstrumentList div.checkbox label {
-  font-size: 0.8em;
+#_downloadMessage {
+  color:#a94442
 }
 
 .orglist-download-container {
@@ -1387,7 +1398,7 @@ color: #777
     background-color: @toolTipColor;
     border: 1px solid @toolTipColor;
     padding: 0.3em;
-    width: 150%;
+    width: 170%;
     font-size: 0.9em;
 }
 .tooltip.top .tooltip-arrow {
@@ -1979,7 +1990,7 @@ div.org-container input[type="checkbox"] {
     font-size: 0.7em !important;
   }
   body.open-nav .left-panel {
-    width: 210px;
+    width: 195px;
   }
 
   body.open-nav .right-panel {
