--- a/portal/templates/flask_user/_macros.html
+++ b/portal/templates/flask_user/_macros.html
@@ -57,7 +57,7 @@
 
 {% macro back_link(url,text) -%}
 <a class="back" href="{{PORTAL}}/{{url}}">
-<span class="glyphicon glyphicon-home" data-toggle="tooltip" data-placement="right" title="back to home" data-original-title="back to Patients List"></span></a>
+<span class="glyphicon glyphicon-home" data-toggle="tooltip" data-placement="top" title="back to home"></span></a>
 {%- endmacro %}
 
 
