make csv download option as the default option for downloading in patients list

--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -28,12 +28,12 @@
                     <label><em class="text-muted">{{ _("Data type:")}}</em></label>
                     <div class="profile-radio-list">
                       <label class="radio-inline">
-                          <input type="radio" name="downloadType" id="_json" value="json"/>
-                          {{ _("JSON") }}
+                          <input type="radio" name="downloadType" id="csv" value="csv" checked/>
+                          {{ _("CSV") }}
                       </label>
                       <label class="radio-inline">
-                          <input type="radio" name="downloadType" id="csv" value="csv"/>
-                          {{ _("CSV") }}
+                          <input type="radio" name="downloadType" id="_json" value="json"/>
+                          {{ _("JSON") }}
                       </label>
                     </div>
                   </div>
