remove unused code in portal.css/less and eproms.css/less and re-arrange media queries

--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -144,7 +144,7 @@ body.open-nav .left-panel {
 }
 div.right-panel {
   position:relative;
-  margin-left:25px;
+  margin-left: 1em;
   transition:margin-left ease .5s;
 }
 
@@ -1723,7 +1723,6 @@ div.org-container input[type="checkbox"] {
   }
 }
 
-
 @media (min-width: 768px) {
   #fullSizeBox {
     /*background-image: none;
@@ -1868,20 +1867,7 @@ div.org-container input[type="checkbox"] {
     }
   }
 }
-@media (max-width: 1029px) {
-  div.right-panel {
-    margin-left: 45px;
-  }
-}
-@media (max-width: 1073px) {
-  body.open-nav .right-panel {
-    margin-left: 210px !important;
-  }
-  #stickyMenu {
-    font-size: 0.7em !important;
-    width: 150px !important;
-  }
-}
+
 @media (max-width: 1199px) {
   .profile-img {
     display: none;
@@ -1939,11 +1925,7 @@ div.org-container input[type="checkbox"] {
     font-size: 0.7em !important;
   }
   body.open-nav .left-panel {
-    width: 210px;
-  }
-
-  body.open-nav .right-panel {
-    margin-left: 190px;
+    width: 220px;
   }
 }
 
@@ -1979,34 +1961,54 @@ div.org-container input[type="checkbox"] {
 }
 @media (max-width: 1745px) {
   body.open-nav .right-panel {
-    margin-left:160px;
+    margin-left: 60px;
+}
+@media (max-width: 1632px) {
+  body.open-nav .right-panel {
+    margin-left: 100px;
+}
+@media (max-width: 1560px) {
+  body.open-nav .right-panel {
+    margin-left:140px;
+}
+@media (max-width: 1491px) {
+  body.open-nav .right-panel {
+    margin-left:180px;
   }
 }
-@media (max-width: 1417px) {
+@media (max-width: 1399px) {
   body.open-nav .right-panel {
-    margin-left:210px !important;
+    margin-left:200px;
+  }
+}
+@media (max-width: 1341px) {
+  body.open-nav .right-panel {
+    margin-left:220px;
+  }
+}
+@media (max-width: 1271px) {
+  div.right-panel {
+    margin-left: 2.5em;
   }
 }
 @media (max-width: 1199px) {
   body.open-nav .right-panel {
-    margin-left:120px !important;
+    margin-left:190px;
   }
 }
-
-@media (max-width: 1180px) {
+@media (max-width: 1070px) {
   body.open-nav .right-panel {
-    margin-left:140px !important;
+    margin-left:210px;
   }
 }
-
-@media (max-width: 1140px) {
+@media (max-width: 991px) {
   body.open-nav .right-panel {
-    margin-left:190px !important;
+    margin-left:180px;
   }
 }
-@media (max-width: 1034px) {
+@media (max-width: 881px) {
   body.open-nav .right-panel {
-    margin-left:210px !important;
+    margin-left:210px;
   }
 }
 
