--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -154,7 +154,7 @@ body.open-nav .left-panel {
 }
 div.right-panel {
   position:relative;
-  margin-left:25px;
+  margin-left:1em;
   transition:margin-left ease .5s;
 }
 
@@ -1769,15 +1769,6 @@ div.org-container input[type="checkbox"] {
     margin-top: 4px;
   }
 }
-@media (max-width: 1073px) {
-  body.open-nav .right-panel {
-    margin-left: 210px !important;
-  }
-  #stickyMenu {
-    font-size: 0.7em !important;
-    width: 150px !important;
-  }
-}
 @media (max-width: 1199px) {
   .profile-img {
     display: none;
@@ -1833,11 +1824,7 @@ div.org-container input[type="checkbox"] {
     font-size: 0.7em !important;
   }
   body.open-nav .left-panel {
-    width: 210px;
-  }
-
-  body.open-nav .right-panel {
-    margin-left: 190px;
+    width: 220px;
   }
 }
 @media (min-width: 1400px) {
@@ -1875,32 +1862,64 @@ div.org-container input[type="checkbox"] {
 }
 @media (max-width: 1745px) {
   body.open-nav .right-panel {
-    margin-left:160px;
-  }
+    margin-left: 60px;
 }
-@media (max-width: 1417px) {
+
+@media (max-width: 1632px) {
   body.open-nav .right-panel {
-    margin-left:195px !important;
+    margin-left: 100px;
+}
+
+@media (max-width: 1560px) {
+  body.open-nav .right-panel {
+    margin-left:140px;
+}
+
+@media (max-width: 1491px) {
+  body.open-nav .right-panel {
+    margin-left:180px;
   }
 }
+
+@media (max-width: 1399px) {
+  body.open-nav .right-panel {
+    margin-left:200px;
+  }
+}
+
+@media (max-width: 1341px) {
+  body.open-nav .right-panel {
+    margin-left:220px;
+  }
+}
+
+@media (max-width: 1271px) {
+  div.right-panel {
+    margin-left: 2.5em;
+  }
+}
+
 @media (max-width: 1199px) {
   body.open-nav .right-panel {
-    margin-left:120px !important;
+    margin-left:190px;
   }
 }
-@media (max-width: 1180px) {
+
+@media (max-width: 1070px) {
   body.open-nav .right-panel {
-    margin-left:140px !important;
+    margin-left:210px;
   }
 }
-@media (max-width: 1140px) {
+
+@media (max-width: 991px) {
   body.open-nav .right-panel {
-    margin-left:190px !important;
+    margin-left:180px;
   }
 }
-@media (max-width: 1034px) {
+
+@media (max-width: 881px) {
   body.open-nav .right-panel {
-    margin-left:210px !important;
+    margin-left:210px;
   }
 }
 /*** https://github.com/lipis/bootstrap-social ***/
