--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -192,7 +192,7 @@ body.open-nav .left-panel {
 }
 div.right-panel {
   position:relative;
-  margin-left:25px;
+  margin-left:1em;
   transition:margin-left ease .5s;
 }
 
@@ -535,7 +535,6 @@ a.btn {
     }
   }
 }
-
 .table-title {
   font-weight: bold;
   font-size: @baseFontSize;
@@ -1918,20 +1917,6 @@ div.org-container input[type="checkbox"] {
     }
   }
 }
-@media (max-width: 1029px) {
-  div.right-panel {
-    margin-left: 45px;
-  }
-}
-@media (max-width: 1073px) {
-  body.open-nav .right-panel {
-    margin-left: 210px !important;
-  }
-  #stickyMenu {
-    font-size: 0.7em !important;
-    width: 150px !important;
-  }
-}
 @media (max-width: 1199px) {
   .profile-img {
     display: none;
@@ -1990,11 +1975,7 @@ div.org-container input[type="checkbox"] {
     font-size: 0.7em !important;
   }
   body.open-nav .left-panel {
-    width: 195px;
-  }
-
-  body.open-nav .right-panel {
-    margin-left: 190px;
+    width: 220px;
   }
 }
 
@@ -2030,39 +2011,56 @@ div.org-container input[type="checkbox"] {
 }
 @media (max-width: 1745px) {
   body.open-nav .right-panel {
-    margin-left:160px;
-  }
+    margin-left: 60px;
 }
-@media (max-width: 1417px) {
+@media (max-width: 1632px) {
   body.open-nav .right-panel {
-    margin-left:195px !important;
+    margin-left: 100px;
+}
+@media (max-width: 1560px) {
+  body.open-nav .right-panel {
+    margin-left:140px;
+}
+@media (max-width: 1491px) {
+  body.open-nav .right-panel {
+    margin-left:180px;
   }
 }
-
+@media (max-width: 1399px) {
+  body.open-nav .right-panel {
+    margin-left:200px;
+  }
+}
+@media (max-width: 1341px) {
+  body.open-nav .right-panel {
+    margin-left:220px;
+  }
+}
+@media (max-width: 1271px) {
+  div.right-panel {
+    margin-left: 2.5em;
+  }
+}
 @media (max-width: 1199px) {
   body.open-nav .right-panel {
-    margin-left:120px !important;
+    margin-left:190px;
   }
 }
-
-@media (max-width: 1180px) {
+@media (max-width: 1070px) {
   body.open-nav .right-panel {
-    margin-left:140px !important;
+    margin-left:210px;
   }
 }
-
-@media (max-width: 1140px) {
+@media (max-width: 991px) {
   body.open-nav .right-panel {
-    margin-left:190px !important;
+    margin-left:180px;
   }
 }
-@media (max-width: 1034px) {
+@media (max-width: 881px) {
   body.open-nav .right-panel {
-    margin-left:210px !important;
+    margin-left:210px;
   }
 }
-
-
 /*** https://github.com/lipis/bootstrap-social ***/
 .btn-social{position:relative;padding-left:44px;text-align:left;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}.btn-social>:first-child{position:absolute;left:0;top:0;bottom:0;width:32px;line-height:39px;font-size:1.6em;text-align:center;border-right:1px solid rgba(0,0,0,0.2)}
 .btn-social.btn-lg{padding-left:61px}.btn-social.btn-lg>:first-child{line-height:45px;width:45px;font-size:1.8em}
