--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1962,14 +1962,17 @@ div.org-container input[type="checkbox"] {
 @media (max-width: 1745px) {
   body.open-nav .right-panel {
     margin-left: 60px;
+  }
 }
 @media (max-width: 1632px) {
   body.open-nav .right-panel {
     margin-left: 100px;
+  }
 }
 @media (max-width: 1560px) {
   body.open-nav .right-panel {
     margin-left:140px;
+  }
 }
 @media (max-width: 1491px) {
   body.open-nav .right-panel {
