--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1508,6 +1508,23 @@ div.org-container input[type="checkbox"] {
 .timezone-container {
   padding-bottom: 2em;
 }
+#profileForm {
+  #firstname {
+    width: 300px;
+    max-width: 100%;
+  }
+  #lastname {
+    width: 300px;
+    max-width: 100%;
+  }
+ #month {
+    margin-left: -1em;
+    width: 105px;
+  }
+  #bdGroup .flex {
+    flex-wrap: nowrap;
+  }
+}
 
 /** Responsive sizes **/
 @media (max-width: 480px) {
@@ -1660,14 +1677,19 @@ div.org-container input[type="checkbox"] {
     width: 100%;
     max-width: 100%;
   }
-
-  #profileForm #bdGroup div.row {
-    height: 12em;
+  #profileForm {
+    #firstname {
+      width: 300px;
+      max-width: 100%;
+    }
+    #lastname {
+      width: 300px;
+      max-width: 100%;
+    }
+    #bdGroup .flex {
+      flex-wrap: nowrap;
+    }
   }
-  #profileForm div.name-section {
-    height: 10em;
-  }
-
   #userSessionReportDetailHeader span.glyphicon-user {
     padding: 0.4em;
   }
@@ -1712,7 +1734,6 @@ div.org-container input[type="checkbox"] {
     }
 
 }
-
 @media (max-width: 730px) {
   #userSessionsList {
     font-size: 0.9em;
@@ -1787,6 +1808,9 @@ div.org-container input[type="checkbox"] {
   }
   .side {
     height: 37em;
+  }
+  .side-xs-one {
+    height: 29em;
   }
   .side-xs {
     height: 22em;
@@ -1867,7 +1891,23 @@ div.org-container input[type="checkbox"] {
     }
   }
 }
-
+@@media (max-width: 1070px) {
+  #profileForm {
+    #date {
+      width: 50px;
+      max-width: 100%;
+    }
+    #year {
+      width: 65px;
+      max-width: 100%;
+      margin-left: -4px;
+    }
+    #month {
+      width: 110px;
+      max-width: 100%;
+    }
+  }
+}
 @media (max-width: 1199px) {
   .profile-img {
     display: none;
@@ -1925,7 +1965,7 @@ div.org-container input[type="checkbox"] {
     font-size: 0.7em !important;
   }
   body.open-nav .left-panel {
-    width: 220px;
+    width: 215px;
   }
 }
 
@@ -1986,7 +2026,12 @@ div.org-container input[type="checkbox"] {
 }
 @media (max-width: 1341px) {
   body.open-nav .right-panel {
-    margin-left:220px;
+    margin-left:190px;
+  }
+}
+@media (max-width: 1243px) {
+  body.open-nav .right-panel {
+    margin-left:200px;
   }
 }
 @media (max-width: 1271px) {
@@ -1996,7 +2041,17 @@ div.org-container input[type="checkbox"] {
 }
 @media (max-width: 1199px) {
   body.open-nav .right-panel {
-    margin-left:190px;
+    margin-left:120px;
+  }
+}
+@media (max-width: 1169px) {
+  body.open-nav .right-panel {
+    margin-left:140px;
+  }
+}
+@media (max-width: 1130px) {
+  body.open-nav .right-panel {
+    margin-left:160px;
   }
 }
 @media (max-width: 1070px) {
@@ -2006,7 +2061,7 @@ div.org-container input[type="checkbox"] {
 }
 @media (max-width: 991px) {
   body.open-nav .right-panel {
-    margin-left:180px;
+    margin-left:160px;
   }
 }
 @media (max-width: 881px) {
@@ -2014,7 +2069,6 @@ div.org-container input[type="checkbox"] {
     margin-left:210px;
   }
 }
-
 /*** https://github.com/lipis/bootstrap-social ***/
 .btn-social{position:relative;padding-left:44px;text-align:left;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}.btn-social>:first-child{position:absolute;left:0;top:0;bottom:0;width:32px;line-height:39px;font-size:1.6em;text-align:center;border-right:1px solid rgba(0,0,0,0.2)}
 .btn-social.btn-lg{padding-left:61px}.btn-social.btn-lg>:first-child{line-height:45px;width:45px;font-size:1.8em}
