--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -12,11 +12,11 @@
     <input type="hidden" name="birthDate" id="birthday" value="{{ person and person.birthdate if person.birthdate }}">
     <div class="form-group profile-section" id="bdGroup">
         <label>{{ _("Birth Date") }}</label>
-        <div class="row">
-            <div class="col-md-4 col-xs-6">
+        <div class="flex">
+            <div>
                 <input class="form-control bd-element" id="date" name="birthdayDate" error-field="errorbirthday" placeholder="DD" type="text" pattern="((0)?[1-9]|1\d|2\d|3[01])" maxlength="2" data-error="Birthday must be valid and in required format." required />
             </div>
-            <div class="col-md-4 col-xs-10">
+            <div>
                 <select class="form-control bd-element" name="birthdayMonth" id="month" error-field="errorbirthday" data-error="Birthday must be valid and in required format." required>
                     <option value="">{{ _("Month") }}...</option>
                     <option value="01">{{ _("January") }}</option>
@@ -33,7 +33,7 @@
                     <option value="12">{{ _("December") }}</option>
                 </select>
             </div>
-            <div class="col-md-4 col-xs-6">
+            <div>
                 <input class="form-control bd-element" id="year" name="birthdayYear" placeholder="YYYY" pattern = "(19|20)\d{2}" type="text" maxlength="4" error-field="errorbirthday" data-error="Birthday must be valid and in required format." required />
             </div>
         </div>
@@ -1056,7 +1056,7 @@
     </div>
     <div class="timezone-warning"></div>
     <div class="timezone-error"></div>
-    <script>
+    <script async>
     {% if person %}
     $(function() {
         getSaveLoaderDiv("profileForm", "profileTimeZone");
@@ -1130,7 +1130,7 @@
             </div>
         </div>
     </div>
-    <script>
+    <script async>
         $(document).ready(
             function() {
                 getSaveLoaderDiv("profileForm", "boolDeathGroup");
@@ -1247,7 +1247,7 @@
     {% if person and person.has_role(ROLE.PATIENT) and current_user.has_role(ROLE.STAFF) and (current_user.id != person.id) %}
          <div class="row">
             <div class="col-md-6 col-sm-12 col-xs-12">
-                <div class="profile-item-container side {% if config.CUSTOM_PATIENT_DETAIL %}side-md{%if person.has_role('patient')%} side-lg{%endif%}{%else%}side-lg{%endif%}">
+                <div class="profile-item-container side {% if config.CUSTOM_PATIENT_DETAIL %}side-md{%if person.has_role('patient')%} side-lg{%endif%}{%else%}side-lg side-xs-one{%endif%}">
                     <h4 id="patientInformationLoc" class="profile-item-title index-item">{% if person.has_role('patient') %}{{ _("Patient Information") }}{%else%}{{ _("User Information") }}{%endif%}</h4>
                     {{profileName(person)}}
                     {{profileBirthDate(person)}}
