--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1519,7 +1519,8 @@ div.org-container input[type="checkbox"] {
   }
  #month {
     margin-left: -1em;
-    width: 105px;
+    width: 180px;
+    max-width: 100%;
   }
   #bdGroup .flex {
     flex-wrap: nowrap;
@@ -1891,29 +1892,25 @@ div.org-container input[type="checkbox"] {
     }
   }
 }
-@@media (max-width: 1070px) {
-  #profileForm {
-    #date {
-      width: 50px;
-      max-width: 100%;
-    }
-    #year {
-      width: 65px;
-      max-width: 100%;
-      margin-left: -4px;
-    }
-    #month {
-      width: 110px;
-      max-width: 100%;
-    }
-  }
-}
 @media (max-width: 1199px) {
   .profile-img {
     display: none;
   }
   #adminTable .organization-field {
     display: none;
+  }
+   #profileForm {
+    #date {
+      width: 50px;
+      max-width: 100%;
+    }
+    #year {
+      width: 90px;
+      max-width: 100%;
+    }
+    #bdGroup .flex {
+      flex-wrap: wrap;
+    }
   }
 }
 @media (min-width: 1200px) {
