--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -179,6 +179,9 @@
                     {% if user and user.has_roles('application_developer') %}
                     <li><a href="{{PORTAL}}/clients">{{ _("Client Applications") }}</a></li>
                     {% endif %}
+                    {% if user and user.has_roles(ROLE.STAFF) %}
+                    <li><a href="{{PORTAL}}/patients/">{{ _("Patients") }}</a></li>
+                    {% endif %}
                     {% if user and user.has_roles('admin') %}
                     <li><a href="{{PORTAL}}/admin">{{ _("User Administration") }}</a></li>
                     {% endif %}
