--- a/portal/static/css/topnav.css
+++ b/portal/static/css/topnav.css
@@ -273,12 +273,16 @@
   /* IE9+ */
   .tnth-dropdown-menu li {
     list-style-image: url(data:0);
+    list-style-position: outside;
+    overflow: hidden;
   }
 }
 @media all and (-ms-high-contrast: none),(-ms-high-contrast: active) {
   /* IE10+ */
   .tnth-dropdown-menu li {
     list-style-image: url(data:0);
+    list-style-position: outside;
+    overflow: hidden;
   }
 }
 /*** Styles for responsive xs size ***/
