fix syntax errors in eproms/portal.css/less files

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -118,7 +118,7 @@ body {
   top: 16em;
   left: 0;
   -webkit-transform: translate(-500px, 0);
-  transform(-500px, 0);
+  transform: (-500px, 0);
   transition: transform 0.5s ease;
   right: 0;
   padding: 1.5em 0.8em;
@@ -257,7 +257,7 @@ div.orglist-selector div.org-container label.org-label {
    -webkit-transition: opacity 0.8s ease-in;
   transition: opacity 0.8s ease-in;
   position: absolute;
-  top: 2px
+  top: 2px;
   left: 0;
   font-size: 0.90em;
 }
