--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -123,6 +123,9 @@
                             {% if user and user.has_roles(ROLE.STAFF) %}
                             <li><a href="{{PORTAL}}/patients/">{{ _("Patients") }}</a></li>
                             {% endif %}
+                             {% if user and user.has_roles(ROLE.INTERVENTION_STAFF) %}
+                            <li><a href="{{PORTAL}}/admin/intervention">{{ _("Intervention Patients") }}</a></li>
+                            {% endif %}
                             {% if user and user.has_roles('admin') %}
                             <li><a href="{{PORTAL}}/admin">{{ _("User Administration") }}</a></li>
                             <li><a href="{{PORTAL}}/settings">{{ _("Settings") }}</a></li>
