fix js error stemming from comment code

--- a/portal/templates/intervention_admin.html
+++ b/portal/templates/intervention_admin.html
@@ -56,10 +56,10 @@ $("#interventionPatientsTable").bootstrapTable({
     }
 });
 
-<!-- Function for instantly triggering password reset email, if needed later -->
-<!-- function resetPassword(event, email) {
+/***Function for instantly triggering password reset email, if needed later
+function resetPassword(event, email) {
     if (email) {
        user_manager.send_reset_password_email(email)
     };
-}; -->
+};***/
 {% endblock %}
