--- a/portal/templates/flask_user/reset_password.html
+++ b/portal/templates/flask_user/reset_password.html
@@ -6,9 +6,10 @@
 
 <form action="" method="POST" class="form" role="form">
     {{ form.hidden_tag() }}
-    {{ render_field(form.new_password, tabindex=10) }}
+    {{ render_field(form.new_password, data_error="Oops, the password does not meet the minimum requirements.", pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d).{8,}$",
+    infoText="Password must have at least 8 characters with one lowercase letter, one uppercase letter and one number", tabindex=10) }}
     {% if user_manager.enable_retype_password %}
-        {{ render_field(form.retype_password, tabindex=20) }}
+        {{ render_field(form.retype_password, data_match="#password", data_match_error="Oops, the two password fields do not match.", tabindex=20) }}
     {% endif %}
     {{ render_submit_field(form.submit, tabindex=90) }}
 </form>
